🐛(frontend) fix double scrollbar on document grid
The document grid was showing a double scrollbar.
It was due to the sr-only class having a width and
height of 1px.
We changed it to 0px, it is now fixed.

--- a/src/frontend/apps/impress/src/pages/globals.css
+++ b/src/frontend/apps/impress/src/pages/globals.css
@@ -92,9 +92,10 @@ nextjs-portal {
 
 /* Screen reader only - visually hidden but accessible to screen readers */
 .sr-only {
-  position: absolute !important;
+  position: fixed !important;
   width: 1px !important;
   height: 1px !important;
+  transform: translateX(-100vw) !important;
   padding: 0 !important;
   margin: -1px !important;
   overflow: hidden !important;
